--- a/web/public/index.htm
+++ b/web/public/index.htm
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./app.js"></script>
 </head>
 
-<body class="no-skin">
+<body>
     <my-app></my-app>    
 </body>
 </html>
